--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,18 @@
 {
     "name": "talalm/php-print-io-wrapper",
     "description": "PHP wrapper for the print.io API",
+    "type": "library",
+    "license": "MIT",
+    "version": "0.1",
     "require": {
         "php": ">=5.3.0",
 	    "guzzlehttp/guzzle": "~5.3|~6.0",
     	"guzzlehttp/guzzle-services": "0.5.0",
     	"guzzlehttp/command": "0.7.0"
-    }
+    },
+    "autoload": {
+        "psr-4": {
+            "PrintIo\\": "src/"
+        }
+    },
 }
