--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.3.0",
 	    "guzzlehttp/guzzle": "~5.3|~6.0",
-    	"guzzlehttp/guzzle-services": "0.5.0",
+    	"guzzlehttp/guzzle-services": "dev-master",
     	"guzzlehttp/command": "0.7.0"
     },
     "autoload": {
