--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "talalm/php-print-io-wrapper",
+    "name": "rafi-whipclip/php-print-io-wrapper",
     "description": "PHP wrapper for the print.io API",
     "type": "library",
     "license": "MIT",
@@ -8,7 +8,7 @@
         "php": ">=5.3.0",
 	    "guzzlehttp/guzzle": "~5.3|~6.0",
     	"guzzlehttp/guzzle-services": "dev-master",
-    	"guzzlehttp/command": "0.7.0"
+    	"guzzlehttp/command": "dev-master"
     },
     "autoload": {
         "psr-4": {
