--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.3.0",
 	    "guzzlehttp/guzzle": "~5.3|~6.0",
     	"guzzlehttp/guzzle-services": "dev-master",
-    	"guzzlehttp/command": "dev-master"
+    	"guzzlehttp/command": "~1.0"
     },
     "autoload": {
         "psr-4": {
