--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "version": "0.1",
     "require": {
         "php": ">=5.3.0",
-	    "guzzlehttp/guzzle": "~5.3|~6.0",
+	    "guzzlehttp/guzzle": "dev-master",
     	"guzzlehttp/guzzle-services": "dev-master",
     	"guzzlehttp/command": "~1.0"
     },
